[add] Files for Russian documents

--- a/data/documents.yml
+++ b/data/documents.yml
@@ -1,6 +1,6 @@
 ru:
   - name: Решение единственного учредителя общества
-    link: reshenie-uchreditelya
+    link: reshenie-edinstvennogo-uchreditelya-obshestva
     description: Решение о создании ООО
   - name: Устав общества
     link: ustav-obshestva
